<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/question" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/endVerticalGuideLine"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Пример вопроса" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/answer"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <ScrollView
        android:id="@+id/scrollViewAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/ratingAnswer"
        app:layout_constraintEnd_toStartOf="@+id/endVerticalGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textViewAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textSize="16sp"
            tools:text="Пример ответа" />

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endVerticalGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <RatingBar
        android:id="@+id/ratingAnswer"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:indeterminate="false"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="1"
        android:scaleX="2"
        android:scaleY="2"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonShowAnswer"
        app:layout_constraintEnd_toStartOf="@+id/endVerticalGuideLine"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextQuestion"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonShowAnswer"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShowAnswer"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/show_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonMarkAnswer"
        app:layout_constraintStart_toEndOf="@+id/buttonNextQuestion"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMarkAnswer"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/mark_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/endVerticalGuideLine"
        app:layout_constraintStart_toEndOf="@+id/buttonShowAnswer"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>